--- a/star/index.html
+++ b/star/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Магіяні сни</title>
+    <title>Магічні сни</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 
     <div class="content">
         <header>
-            <h1>Магіяні сни</h1>
+            <h1>Магічні сни</h1>
             <p>Місце, де сни стають магічними і казковими</p>
         </header>
         <section class="dream-categories">
